fix z-index conference themes

--- a/src/styles/components/_conferenceThemes.scss
+++ b/src/styles/components/_conferenceThemes.scss
@@ -7,6 +7,7 @@
         height: 180%;
         overflow: hidden;
         position: absolute;
+        z-index: -1;
 
         img {
             position: relative;
@@ -22,6 +23,7 @@
         height: 180%;
         overflow: hidden;
         position: absolute;
+        z-index: -1;
         
         img {
             position: relative;
